tests/features/operations/string_operations.out
--- String Operations ---
--- Concatenation ---
hello world
--- Multiplication ---
aaaaa
--- Illegal Operations ---
Caught expected error: Traceback (most recent call last):
File tests/features/operations/string_operations.sad, line 14, in <program>
IllegalOperationError: Cannot apply '-' to a String type
Caught expected error: Traceback (most recent call last):
File tests/features/operations/string_operations.sad, line 20, in <program>
IllegalOperationError: Cannot apply '/' to a String type
Caught expected error: Traceback (most recent call last):
File tests/features/operations/string_operations.sad, line 26, in <program>
IllegalOperationError: Expected a String type
